view profile, auth section alignment fix

--- a/app/assets/stylus/common/permission.styl
+++ b/app/assets/stylus/common/permission.styl
@@ -22,9 +22,6 @@
   color pale
   margin-left f4
 
-.permission-auth-expiration
-  text-align right
-
 .permission-auth-heading
   font-weight bold
   color blue
@@ -32,5 +29,3 @@
   .icon
     float right
     margin-top f2
-  &.expiration
-    text-align right
